# defectool

./: LICENSE  README.md  example_config.yaml  pyproject.toml  tests.py
defectool/: __init__.py  analyse.py  calculators.py  cli.py  config.py  db.py  generate.py  relax.py
defectool/io/: espresso.py  lammps.py
example/: BN.poscar  example_config.yaml
example/defectool_output/: defectool.db  relaxed_structures.xyz
example/defectool_output/structures/: bond_m0.100.vasp  bond_p0.100.vasp  pristine.vasp  rattle_0.vasp  rattle_1.vasp  undistorted.vasp
